--- a/src/app/team-card/team-card.component.html
+++ b/src/app/team-card/team-card.component.html
@@ -1,4 +1,4 @@
-<div class="team-card">
+<div class="team-card" [routerLink]="['/standings', 1]">
     <img src="../../assets/img/bayer.png" alt="bayer">
     <p class="team-name">Bayer</p>
 </div>
