--- a/src/app/teams/teams.component.html
+++ b/src/app/teams/teams.component.html
@@ -6,4 +6,5 @@
     <app-team-card></app-team-card>
     <app-team-card></app-team-card>
     <app-team-card></app-team-card>
+    <router-outlet></router-outlet>
 </div>
