--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -25,9 +25,13 @@
   font-size: 1.2em;
   cursor: pointer;
   li {
-    padding: 1.5em;
     position: relative;
-
+    & > a {
+      display: inline-block;
+      padding: 1.5em;
+      text-decoration: none;
+      color: inherit;
+    }
     &:hover {
       background: var(--ouline-color);
       background: linear-gradient(
@@ -47,5 +51,25 @@
       bottom: -1px;
       left: 0;
     }
+  }
+}
+
+.active {
+  background: var(--ouline-color);
+  background: linear-gradient(
+    0deg,
+    rgba(185, 74, 0, 0.5) 0%,
+    rgba(185, 74, 0, 0.1) 60%,
+    rgba(185, 74, 0, 0) 100%
+  );
+  &::after {
+    display: block;
+    content: "";
+    background: #ff7403;
+    height: 2px;
+    width: 100%;
+    position: absolute;
+    bottom: -1px;
+    left: 0;
   }
 }
