--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,10 @@
   --secondary-bg: #282739;
   --main-text-color: #e0e0e0;
   --secondary-text-color: #c4c4c4;
-  --ouline-color: #ff7403;
+  --outline-color: #ff7403;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
