--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,9 +1,11 @@
 .navbar {
   display: flex;
+  flex: 1 1 auto;
+  width: 100%;
   padding-left: 2em;
   padding-top: 1em;
   align-items: baseline;
-  border-bottom: 1px solid #bebebe80;
+  border-bottom: 1px solid var(--border-color);
   background-color: var(--main-bg);
   color: var(--main-text-color);
 }
@@ -19,11 +21,19 @@
 
 .items {
   display: flex;
+  flex: 1 1 auto;
   margin-left: 1.5em;
   height: 100%;
   list-style-type: none;
   font-size: 1.2em;
   cursor: pointer;
+
+  & > .registration-block {
+    display: flex;
+    margin-left: auto;
+    justify-content: flex-end;
+  }
+
   li {
     position: relative;
     & > a {
@@ -31,6 +41,20 @@
       padding: 1.5em;
       text-decoration: none;
       color: inherit;
+    }
+
+    & > a.register {
+      padding-right: 0;
+    }
+
+    & > a.register:hover {
+      text-decoration: underline;
+    }
+    & > a.login {
+      padding-left: 0;
+    }
+    & > a.login:hover {
+      text-decoration: underline;
     }
     &:hover {
       background: var(--ouline-color);
