--- a/src/app/league-card/league-card.component.scss
+++ b/src/app/league-card/league-card.component.scss
@@ -1,3 +1,7 @@
+:host {
+  position: relative;
+}
+
 .league-card {
   display: flex;
   flex-direction: column;
@@ -7,12 +11,15 @@
   padding: 2.2em 0.9em;
   width: 160px;
   max-width: 200px;
+  height: 260px;
 
   font-size: 1.2em;
   color: var(--main-text-color);
 
   border-radius: 20px;
   background-color: var(--secondary-bg);
+
+  overflow-y: hidden;
   img {
     display: inline-block;
     width: 100%;
@@ -33,11 +40,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin-top: 1.5em;
+  text-align: center;
 }
 
 .league-name {
-  font-size: 1.3em;
+  display: inline;
+  font-size: 1.2em;
 }
 .league-country {
   font-size: 0.9em;
