--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,3 @@
 <div class="search">
-    <input type="search" placeholder="Search">
+    <input type="search" placeholder="Search" (input)="change($event)">
 </div>
