--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,7 @@
             <a [routerLink]="['/teams']">Teams</a>
         </li>
         <div class="registration-block">
-            <li routerLink="active">
+            <li routerLinkActive="active">
                 <a class="register" [routerLink]="['/register']">Register</a>/
                 <a class="login" [routerLink]="['/login']">Login</a>
             </li>
