--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -12,7 +12,7 @@
     outline: none;
     &:focus,
     &:hover {
-      box-shadow: 0px 0px 10px var(--ouline-color);
+      box-shadow: 0px 0px 10px var(--outline-color);
     }
   }
 }
