--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,7 @@ body {
   outline: none;
   &:hover {
     transform: scale(1.1);
-    box-shadow: 0 0 5px 2px var(--outline-color);
+    box-shadow: 0px 0px 10px var(--outline-color);
   }
 
   &::after {
@@ -146,7 +146,7 @@ body {
    font-size: 1.1em;
    color: var(--secondary-text-color);
 
-   &:hover {
+   &:hover {    
     box-shadow: 0 0 3px 2px var(--outline-color);
     border-color: transparent;
   }
@@ -181,8 +181,7 @@ body {
   }
 
   &:hover {
-    transform: scale(1.1);
-    box-shadow: 0 0 5px 2px var(--outline-color);
+    color: var(--outline-color);    
   }
 }
 
