--- a/src/app/admin/team/create-team/create-team.component.html
+++ b/src/app/admin/team/create-team/create-team.component.html
@@ -1,8 +1,8 @@
 <div class="form-background" (click)="toCards()">
     <form class="create-update-form" [formGroup]="form" (click)="$event.stopPropagation()">
         <div class="form-group">
-            <img class="form-image" src="" alt="icon">
-            <!-- <input class="form-image-input" type="file" id="leagueimage" formControlName="leagueimage"> -->
+            <img class="form-image" [src]="" alt="icon">
+            <input class="form-image-input" type="file" id="leagueimage" formControlName="leagueimage">
         </div>
 
         <div class="form-group">
