--- a/src/app/league-card/league-card.component.scss
+++ b/src/app/league-card/league-card.component.scss
@@ -29,6 +29,7 @@
     height: 100%;
     max-height: 120px;
     border-radius: 50%;
+    border: 2px solid var(--main-bg);
     aspect-ratio: 1 / 1;
     object-fit: cover;
   }
