--- a/src/app/team-card/team-card.component.scss
+++ b/src/app/team-card/team-card.component.scss
@@ -18,19 +18,21 @@
 
   border-radius: 20px;
   background-color: var(--secondary-bg);
+
+  transition: transform .1s;
   img {
     display: inline-block;
     width: 100%;
     max-width: 120px;
-    height: auto;
+    height: 100%;
     max-height: 120px;
     border: 2px solid var(--main-bg);
     border-radius: 50%;
     aspect-ratio: 1 / 1;
-    object-fit: contain;
+    object-fit: cover;
   }
   &:hover {
-    box-shadow: 0px 0px 10px var(--ouline-color);
+    box-shadow: 0px 0px 10px var(--outline-color);
     transform: scale(1.01);
   }
 }
