--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,14 +24,15 @@ body {
 .btn-add {
   width: 50px;
   height: 50px;
-  border: none;
+  border: 1px solid var(--main-bg);
   border-radius: 50%;
   background-color: var(--secondary-bg);
-  position: absolute;
-  bottom: 100px;
-  right: 100px;
+  position: fixed;
+  bottom: 50px;
+  right: 70px;
   transition: transform .1s;
   outline: none;
+  z-index: 1;
   &:hover {
     transform: scale(1.1);
     box-shadow: 0px 0px 10px var(--outline-color);
@@ -100,7 +101,7 @@ body {
   border: 1px solid var(--border-color);
   border-radius: 50%;
   background-color: var(--main-bg);
-  object-fit: cover;
+  object-fit: contain;
   
   cursor: pointer;
   
