--- a/src/app/standings/standings.component.html
+++ b/src/app/standings/standings.component.html
@@ -1,62 +1,27 @@
 <div class="container">
-    <table class="table">
-        <tr>
-            <td>12.12.2022</td>
-            <td>12:00</td>
-            <td class="status"><span>SCHEDULED</span></td>
+    <table class="table standings" >
+        <tr *ngFor="let s of standings">
+            <td>{{s.date | date: 'EEEE, d MMMM y'}}</td>
+            <td>{{s.date | date: 'HH:mm'}}</td>
+            <td>{{s.league.name}}</td>
+            <td class="status"><span [ngClass]="{live: s.status.toString() == '1'}">{{s.status | status}}</span></td>
             <td class="team-row">
                 <div class="team">
-                    <img src="../../assets/img/bayer.png" alt="teamA">
-                    <a href="">Bayern</a>
+                    <img src={{s.homeTeam.imageUrl}} alt="teamA">
+                    <a href="">{{s.homeTeam.name}}</a>
                 </div>
             </td>
             <td>-</td>
             <td class="team-row">
                 <div class="team">
-                    <img src="../../assets/img/bayer.png" alt="teamB">
-                    <a href="">Juventus</a>
+                    <img src={{s.awayTeam.imageUrl}} alt="teamB">
+                    <a href="">{{s.awayTeam.name}}</a>
                 </div>
             </td>
             <td>1 : 0 (0 : 0)(0 : 0)</td>
         </tr>
-        <tr>
-            <td>12.12.2022</td>
-            <td>12:00</td>
-            <td class="status"><span class="live">LIVE</span></td>
-            <td class="team-row">
-                <div class="team">
-                    <img src="../../assets/img/bayer.png" alt="teamA">
-                    <a href="">Bayern</a>
-                </div>
-            </td>
-            <td>-</td>
-            <td class="team-row ">
-                <div class="team">
-                    <img src="../../assets/img/bayer.png" alt="teamB">
-                    <a href="">Juventus</a>
-                </div>
-            </td>
-            <td>1 : 0 (0 : 0)(0 : 0)</td>
-        </tr>
-        <tr>
-            <td>12.12.2022</td>
-            <td>12:00</td>
-            <td class="status"><span>PAUSED</span></td>
-            <td class="team-row">
-                <div class="team">
-                    <img src="../../assets/img/Bundesliga.png" alt="teamA">
-                    <a href="">PSG</a>
-                </div>
-            </td>
-            <td>-</td>
-            <td class="team-row">
-                <div class="team">
-                    <img src="../../assets/img/England.jpg" alt="teamB">
-                    <a href="">Manchester United</a>
-                </div>
-            </td>
-            <td>1 : 0 (0 : 0)(0 : 0)</td>
-        </tr>
+        
 
     </table>
 </div>
+<button class="btn-add" type="button" [routerLink]="['/admin/standings/create']"></button>
