--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
   --secondary-text-color: #c4c4c4;
   --outline-color: #ff7403;
   --border-color: #bebebe80;
+  --invalid: #870707;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -67,7 +68,10 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(19, 19, 30, 0.9);
-
+ 
+  &.score {
+    justify-content: flex-start;
+  }
 }
 
 .create-update-form {
@@ -224,3 +228,145 @@ body {
       text-decoration: underline;
   }
 }
+
+.container {
+  display: flex;
+  padding: 0 2em;
+  margin: 0 auto;
+}
+
+.table {  
+  display: block;
+  margin: 25px auto;  
+  border-radius: .5em;
+  border-collapse: collapse;
+  color: var(--secondary-text-color);
+  text-align: center;
+  overflow: hidden;
+  tr {    
+    border-bottom: 1px solid var(--main-bg);
+    background-color: var(--secondary-bg);
+  }
+  
+  td a {
+    white-space: nowrap;
+    color: inherit;
+  }
+  
+  tr:nth-of-type(even) {
+    background-color: #302e44;
+  }
+  td,
+  th {
+    padding: 1em 0.5em;
+  }
+  th {
+    font-size: 1.1em;
+  }
+
+  td:first-child,
+  th:first-child {
+    padding-left: 1em;
+  }
+
+  td:last-child,
+  td:last-child {
+    padding-right: 1em;
+  }  
+  tr:hover {
+    background-color: #212133;
+  }
+}
+
+.status {
+  font-size: 0.9em;
+}
+.live {
+  padding: 2px 4px;
+  border-radius: 2px;
+  background-color: rgb(226, 77, 77);
+}
+
+.team-row {
+  display: flex;
+  flex: 1 1 0%;
+  justify-content: center;
+  img {
+    padding-right: 10px;
+    width: 30px;
+  }
+}
+
+.team {
+  display: flex;
+  flex: 1 1 0%;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0 .5em;
+}
+
+.form-create-standings {
+  padding: .4em .8em;  
+  background-color: var(--main-bg);
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  font-family: inherit;
+  font-size: 1.1em;
+  color: var(--secondary-text-color);
+  outline: none;  
+  
+  &::-webkit-calendar-picker-indicator {
+    filter: invert(.7);
+  }
+  
+  &:hover {
+    box-shadow: 0 0 3px 2px var(--outline-color);
+    border-color: transparent;    
+  }  
+}
+
+.form-create-score {
+  padding: .4em .2em;  
+  margin: .1em;
+  width: 3em;
+  text-align: center;
+  background-color: var(--main-bg);
+  border: 1px solid var(--border-color);
+  border-radius: 10px;
+  font-family: inherit;
+  font-size: 1.1em;
+  color: var(--secondary-text-color);
+  outline: none;   
+
+  &::-webkit-inner-spin-button,
+  &::-webkit-outer-spin-button {
+    appearance: none;
+  }
+
+  &:hover {
+    box-shadow: 0 0 3px 2px var(--outline-color);
+    border-color: transparent;    
+  }  
+}
+
+.score {
+  display: flex;
+}
+
+input,
+select {
+  &.ng-invalid.ng-touched {    
+    border-color: var(--invalid);
+  }
+}
+
+button:disabled {
+  color: #434343;
+  &:hover {
+    box-shadow: none;
+    border: 1px solid var(--border-color);
+  }
+}
+
+ 
